templates/gi-client-static-deployemnt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gi-client-static
spec:
  selector:
    matchLabels:
      app: gi-client-static
  replicas: 1
  template:
    metadata:
      labels:
        app: gi-client-static
    spec:
      containers:
      - name: gi-client-static
        image: gi-client-static
        imagePullPolicy: Never
        resources:
          limits:
            memory: "2048Mi"
            cpu: "1000m"
        ports:
        - containerPort: 3000
