templates/gi-client-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gi-client-web
spec:
  selector:
    matchLabels:
      app: gi-client-web
  replicas: 1
  template:
    metadata:
      labels:
        app: gi-client-web
    spec:
      containers:
      - name: gi-client-web
        image: gi-client-web
        imagePullPolicy: Never
        resources:
          limits:
            memory: "512Mi"
            cpu: "1500m"
        ports:
        - containerPort: 3000
