templates/gi-common-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gi-common-service
spec:
  selector:
    matchLabels:
      app: gi-common-service
  replicas: 1
  template:
    metadata:
      labels:
        app: gi-common-service
    spec:
      containers:
      - name: gi-common-service
        image: gi-common-service
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "400m"
        ports:
        - containerPort: 3003
