templates/gi-web-bridge-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gi-web-bridge
spec:
  selector:
    matchLabels:
      app: gi-web-bridge
  replicas: 1
  template:
    metadata:
      labels:
        app: gi-web-bridge
    spec:
      containers:
      - name: gi-web-bridge
        image: gi-web-bridge
        imagePullPolicy: Never
        resources:
          limits:
            memory: "1024Mi"
            cpu: "500m"
        ports:
        - containerPort: 3002
