templates/grip-client-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grip-client-backend
spec:
  selector:
    matchLabels:
      app: grip-client-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: grip-client-backend
    spec:
      containers:
      - name: grip-client-backend
        image: grip-client-backend
        imagePullPolicy: Never
        resources:
          limits:
            memory: "512Mi"
            cpu: "1000m"
        ports:
        - containerPort: 4000
