templates/grip-client-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grip-client-web
spec:
  selector:
    matchLabels:
      app: grip-client-web
  replicas: 1
  template:
    metadata:
      labels:
        app: grip-client-web
    spec:
      containers:
      - name: grip-client-web
        image: grip-client-web
        imagePullPolicy: Never
        resources:
          limits:
            memory: "1000Mi"
            cpu: "500m"
        ports:
        - containerPort: 8081
