templates/gi-client-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gi-client-web
spec:
  type: ClusterIP
  selector:
    app: gi-client-web
  ports:
  - port: 3000
    targetPort: 3000
