templates/gi-common-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gi-common-service
spec:
  type: LoadBalancer
  selector:
    app: gi-common-service
  ports:
  - port: 3003
    targetPort: 3003
