templates/gi-external-bridge-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gi-external-bridge
spec:
  type: ClusterIP
  selector:
    app: gi-external-bridge
  ports:
  - port: 3001
    targetPort: 3001
