templates/gi-web-bridge-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gi-web-bridge
spec:
  type: ClusterIP
  selector:
    app: gi-web-bridge
  ports:
  - port: 3002
    targetPort: 3002
