templates/grip-client-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: LoadBalancer
  selector:
    app: grip-client-backend
  ports:
  - port: 4000
    targetPort: 4000
