templates/grip-client-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grip-client-web
spec:
  type: ClusterIP
  selector:
    app: grip-client-web
  ports:
  - port: 8081
    targetPort: 8081
