templates/main-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api/external
        pathType: Prefix
        backend:
          service:
            name: gi-external-bridge
            port:
              number: 3001
      - path: /api/v3
        pathType: Prefix
        backend:
          service:
            name: gi-web-bridge
            port:
              number: 3002
      - path: /api/common
        pathType: Prefix
        backend:
          service:
            name: gi-common-service
            port:
              number: 3003
      - path: /api/v2
        pathType: Prefix
        backend:
          service:
            name: grip-client-backend
            port:
              number: 4000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: grip-client-web
            port:
              number: 8081
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: grip-client-web
            port:
              number: 8081
      - path: /payment-processing
        pathType: Prefix
        backend:
          service:
            name: grip-client-web
            port:
              number: 8081
      - path: /wallet-processing
        pathType: Prefix
        backend:
          service:
            name: grip-client-web
            port:
              number: 8081
      - path: /autoinvest-processing
        pathType: Prefix
        backend:
          service:
            name: grip-client-web
            port:
              number: 8081
      # - path: /login
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: gi-client-web
      #       port:
      #         number: 3000
      - path: /_next
        pathType: Prefix
        backend:
          service:
            name: gi-client-web
            port:
              number: 3000
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: gi-client-web
            port:
              number: 3000
      - path: /assets
        pathType: Prefix
        backend:
          service:
            name: gi-client-web
            port:
              number: 3000
      - path: /portfolio
        pathType: Prefix
        backend:
          service:
            name: gi-client-web
            port:
              number: 3000
      - path: /vault
        pathType: Prefix
        backend:
          service:
            name: gi-client-web
            port:
              number: 3000
      - path: /profile
        pathType: Prefix
        backend:
          service:
            name: gi-client-web
            port:
              number: 3000
      - path: /logout
        pathType: Prefix
        backend:
          service:
            name: gi-client-web
            port:
              number: 3000
      - path: /fonts
        pathType: Prefix
        backend:
          service:
            name: grip-client-web
            port:
              number: 8081
      - path: /static
        pathType: Prefix
        backend:
          service:
            name: grip-client-web
            port:
              number: 8081
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gi-client-static
            port:
              number: 3005
